[package]
name = "radar-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_float_eq = "1.1.3"
bytemuck = { version = "1.13.1", features = ["extern_crate_alloc", "derive"] }
env_logger = "0.10.0"
futures-intrusive = "0.5.0"
nalgebra = { version = "0.32.2", features = ["bytemuck"] }
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.16.1"
